// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ClusterAccessModal should match snapshot 1`] = `
<body>
  <div>
    <section
      class="flex flex-col p-5"
    >
      <h1
        class="text-2xl font-bold h4 max-w-sm truncate text-neutral"
      >
        Access to your cluster
      </h1>
      <p
        class="mb-6 mt-2 text-sm text-neutral-subtle"
      >
        This section explains how to connect to your 
        cluster using kubectl, k9s.
      </p>
      <ul
        class="flex flex-col gap-4"
      >
        <li
          class="flex flex-col gap-2 rounded border border-neutral px-4 py-3 text-sm"
        >
          <span
            class="font-medium"
          >
            1
            . 
            Download/Update Qovery CLI
          </span>
          <p
            class="text-neutral-subtle"
          >
            Download and install the Qovery CLI (or update its version to the latest version)
          </p>
          <a
            class="cursor-pointer transition duration-100 font-medium inline-flex items-center gap-1 hover:brightness-75 text-info text-sm"
            href="https://www.qovery.com/docs/cli/overview#installation"
            rel="noopener noreferrer"
            target="_blank"
          >
            https://www.qovery.com/docs/cli/overview#installation
            <i
              aria-hidden="true"
              class="fa-regular fa-arrow-up-right-from-square text-xs leading-5"
            />
          </a>
        </li>
        <li
          class="flex flex-col gap-2 rounded border border-neutral px-4 py-3 text-sm"
        >
          <span
            class="font-medium"
          >
            2
            . 
            Get your kubeconfig
          </span>
          <div
            class="flex justify-between gap-6 rounded-sm bg-surface-neutral-subtle p-3 text-neutral"
          >
            <div>
              <span
                class="select-none"
              >
                $ 
              </span>
              qovery cluster kubeconfig --cluster-id 000
            </div>
            <button
              class="inline-flex items-center shrink-0 transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 outline-brand text-xs h-7 px-2 rounded bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral cursor-pointer gap-2 font-sans font-medium"
              type="button"
            >
              Copy
              <i
                aria-hidden="true"
                class="fa-regular fa-copy text-xs"
              />
            </button>
          </div>
        </li>
        <li
          class="flex flex-col gap-2 rounded border border-neutral px-4 py-3 text-sm"
        >
          <span
            class="font-medium"
          >
            3
            . 
            Export your kubeconfig
          </span>
          <p
            class="text-neutral-subtle"
          >
            Replace the path from the previous command's output and run the following command in your terminal.
          </p>
          <div
            class="flex justify-between gap-6 rounded-sm bg-surface-neutral-subtle p-3 text-neutral"
          >
            <div>
              <span
                class="select-none"
              >
                $ 
              </span>
              export KUBECONFIG=&lt;path&gt;
            </div>
            <button
              class="inline-flex items-center shrink-0 transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 outline-brand text-xs h-7 px-2 rounded bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral cursor-pointer gap-2 font-sans font-medium"
              type="button"
            >
              Copy
              <i
                aria-hidden="true"
                class="fa-regular fa-copy text-xs"
              />
            </button>
          </div>
        </li>
        <li
          class="flex flex-col gap-2 rounded border border-neutral px-4 py-3 text-sm"
        >
          <span
            class="font-medium"
          >
            4
            . 
            Use your favorite tool to access your cluster. Examples:
          </span>
          <div
            class="flex justify-between gap-6 rounded-sm bg-surface-neutral-subtle p-3 text-neutral"
          >
            <div>
              <span
                class="select-none"
              >
                $ 
              </span>
              kubectl
            </div>
            <button
              class="inline-flex items-center shrink-0 transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 outline-brand text-xs h-7 px-2 rounded bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral cursor-pointer gap-2 font-sans font-medium"
              type="button"
            >
              Copy
              <i
                aria-hidden="true"
                class="fa-regular fa-copy text-xs"
              />
            </button>
          </div>
          <div
            class="flex justify-between gap-6 rounded-sm bg-surface-neutral-subtle p-3 text-neutral"
          >
            <div>
              <span
                class="select-none"
              >
                $ 
              </span>
              k9s
            </div>
            <button
              class="inline-flex items-center shrink-0 transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 outline-brand text-xs h-7 px-2 rounded bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral cursor-pointer gap-2 font-sans font-medium"
              type="button"
            >
              Copy
              <i
                aria-hidden="true"
                class="fa-regular fa-copy text-xs"
              />
            </button>
          </div>
        </li>
      </ul>
    </section>
  </div>
</body>
`;

exports[`ClusterAccessModal should match snapshot with SELF_MANAGED type 1`] = `
<body>
  <div>
    <section
      class="flex flex-col p-5"
    >
      <h1
        class="text-2xl font-bold h4 max-w-sm truncate text-neutral"
      >
        Access to your cluster
      </h1>
      <p
        class="mb-6 mt-2 text-sm text-neutral-subtle"
      >
        This section explains how to connect to your 
        self-managed 
        cluster using kubectl, k9s.
      </p>
      <ul
        class="flex flex-col gap-4"
      >
        <li
          class="flex flex-col gap-2 rounded border border-neutral px-4 py-3 text-sm"
        >
          <span
            class="font-medium"
          >
            1
            . 
            Download/Update Qovery CLI
          </span>
          <p
            class="text-neutral-subtle"
          >
            Download and install the Qovery CLI (or update its version to the latest version)
          </p>
          <a
            class="cursor-pointer transition duration-100 font-medium inline-flex items-center gap-1 hover:brightness-75 text-info text-sm"
            href="https://www.qovery.com/docs/cli/overview#installation"
            rel="noopener noreferrer"
            target="_blank"
          >
            https://www.qovery.com/docs/cli/overview#installation
            <i
              aria-hidden="true"
              class="fa-regular fa-arrow-up-right-from-square text-xs leading-5"
            />
          </a>
        </li>
        <li
          class="flex flex-col gap-2 rounded border border-neutral px-4 py-3 text-sm"
        >
          <span
            class="font-medium"
          >
            2
            . 
            Run your debug pod
          </span>
          <div
            class="flex justify-between gap-6 rounded-sm bg-surface-neutral-subtle p-3 text-neutral"
          >
            <div>
              <span
                class="select-none"
              >
                $ 
              </span>
              qovery cluster debug-pod --cluster-id 000
            </div>
            <button
              class="inline-flex items-center shrink-0 transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 outline-brand text-xs h-7 px-2 rounded bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral cursor-pointer gap-2 font-sans font-medium"
              type="button"
            >
              Copy
              <i
                aria-hidden="true"
                class="fa-regular fa-copy text-xs"
              />
            </button>
          </div>
        </li>
        <li
          class="flex flex-col gap-2 rounded border border-neutral px-4 py-3 text-sm"
        >
          <span
            class="font-medium"
          >
            3
            . 
            Use your favorite tool to access your cluster. Examples:
          </span>
          <div
            class="flex justify-between gap-6 rounded-sm bg-surface-neutral-subtle p-3 text-neutral"
          >
            <div>
              <span
                class="select-none"
              >
                $ 
              </span>
              kubectl
            </div>
            <button
              class="inline-flex items-center shrink-0 transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 outline-brand text-xs h-7 px-2 rounded bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral cursor-pointer gap-2 font-sans font-medium"
              type="button"
            >
              Copy
              <i
                aria-hidden="true"
                class="fa-regular fa-copy text-xs"
              />
            </button>
          </div>
          <div
            class="flex justify-between gap-6 rounded-sm bg-surface-neutral-subtle p-3 text-neutral"
          >
            <div>
              <span
                class="select-none"
              >
                $ 
              </span>
              k9s
            </div>
            <button
              class="inline-flex items-center shrink-0 transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 outline-brand text-xs h-7 px-2 rounded bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral cursor-pointer gap-2 font-sans font-medium"
              type="button"
            >
              Copy
              <i
                aria-hidden="true"
                class="fa-regular fa-copy text-xs"
              />
            </button>
          </div>
        </li>
      </ul>
    </section>
  </div>
</body>
`;
